# opencv-webcam-stream

./: README.md  main.cpp
src/: CMakeLists.txt  main.cpp
